feat(root): add borrow and lend
